labs/r13-incident-investigation/06-network-failure/evidence/hubble-flows.txt
Sep 13 05:14:11.264: default/backend-v2-787f6458b4-dx9fg:44349 (ID:29663) -> kube-system/coredns-6f6b679f8f-g2msr:53 (ID:11687) policy-verdict:L3-L4 EGRESS ALLOWED (UDP)
Sep 13 05:14:11.264: default/backend-v2-787f6458b4-dx9fg:44349 (ID:29663) -> kube-system/coredns-6f6b679f8f-g2msr:53 (ID:11687) to-endpoint FORWARDED (UDP)
Sep 13 05:14:11.264: default/backend-v2-787f6458b4-dx9fg:44349 (ID:29663) <- kube-system/coredns-6f6b679f8f-g2msr:53 (ID:11687) to-endpoint FORWARDED (UDP)
Sep 13 05:14:11.264: default/backend-v2-787f6458b4-dx9fg:41708 (ID:29663) <> default/database-6d64fd885d-jddbg:5432 (ID:2361) policy-verdict:none EGRESS DENIED (TCP Flags: SYN)
Sep 13 05:14:11.264: default/backend-v2-787f6458b4-dx9fg:41708 (ID:29663) <> default/database-6d64fd885d-jddbg:5432 (ID:2361) Policy denied DROPPED (TCP Flags: SYN)
Sep 13 05:14:12.267: default/backend-v2-787f6458b4-dx9fg:41708 (ID:29663) <> default/database-6d64fd885d-jddbg:5432 (ID:2361) policy-verdict:none EGRESS DENIED (TCP Flags: SYN)
Sep 13 05:14:12.267: default/backend-v2-787f6458b4-dx9fg:41708 (ID:29663) <> default/database-6d64fd885d-jddbg:5432 (ID:2361) Policy denied DROPPED (TCP Flags: SYN)
Sep 13 05:14:13.295: default/backend-v2-787f6458b4-dx9fg:41708 (ID:29663) <> default/database-6d64fd885d-jddbg:5432 (ID:2361) policy-verdict:none EGRESS DENIED (TCP Flags: SYN)
Sep 13 05:14:13.295: default/backend-v2-787f6458b4-dx9fg:41708 (ID:29663) <> default/database-6d64fd885d-jddbg:5432 (ID:2361) Policy denied DROPPED (TCP Flags: SYN)
Sep 13 05:14:14.315: default/backend-v2-787f6458b4-dx9fg:41708 (ID:29663) <> default/database-6d64fd885d-jddbg:5432 (ID:2361) policy-verdict:none EGRESS DENIED (TCP Flags: SYN)
Sep 13 05:14:14.315: default/backend-v2-787f6458b4-dx9fg:41708 (ID:29663) <> default/database-6d64fd885d-jddbg:5432 (ID:2361) Policy denied DROPPED (TCP Flags: SYN)
